--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
         <item name="android:windowExitAnimation">@anim/push_bottom_out</item>
     </style>
 
-    <style name="MyPopupStyle" parent="android:Theme.Dialog">
+    <style name="MyPopupStyle" parent="AppTheme">
         <item name="android:windowAnimationStyle">@style/AnimBottom</item>
         <item name="android:windowFrame">@null</item>
         ;!-- 边框 -->
@@ -45,6 +45,5 @@
         <item name="android:backgroundDimEnabled">true</item>
         ;!-- 模糊 -->
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:editTextStyle"></item>
     </style>
 </resources>
