--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,13 +7,14 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Blog" />
         <item
+            android:id="@+id/nav_forum"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Forum" />
+        <item
             android:id="@+id/nav_about_us"
             android:icon="@drawable/about_us"
             android:title="@string/MENU_ABOUT" />
-        <!--        <item
-                    android:id="@+id/nav_slideshow"
-                    android:icon="@drawable/ic_menu_slideshow"
-                    android:title="Slideshow" />
+        <!--
                 <item
                     android:id="@+id/nav_manage"
                     android:icon="@drawable/ic_menu_manage"
