--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,7 +25,8 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/LOGIN_OR_REGISTER"
         android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/tvCurrentUsername" />
 
 
 
