--- a/app/src/main/res/layout/activity_post_choose.xml
+++ b/app/src/main/res/layout/activity_post_choose.xml
@@ -3,4 +3,24 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/forumBackgroundHolder"
+        android:layout_weight="4"></LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/forumPostlistHolder"
+        android:layout_weight="1">
+        <cn.jeeper41.jeeper.wiget.RefreshListView
+            android:id="@+id/lvPostChoose"
+            android:divider="#05000000"
+            android:dividerHeight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </LinearLayout>
