--- a/app/src/main/res/layout/activity_post_choose.xml
+++ b/app/src/main/res/layout/activity_post_choose.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/forumBackgroundHolder"
-        android:layout_weight="4"></LinearLayout>
+        android:layout_weight="5"
+        >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@color/CustomGray"
+            android:id="@+id/imageView" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvForumTitle"
+            android:textColor="#ffffffff"
+            android:textSize="24sp"
+            android:background="#00000000"
+            android:layout_alignParentBottom="true" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="vertical"
