--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#000000</color>
     <color name="white">#ffffff</color>
     <color name="main_title_bg">#f17a0a</color>
+    <color name="CustomGray">#8a977b</color>
 </resources>
