--- a/app/src/main/res/layout/activity_jeeper_title_bar.xml
+++ b/app/src/main/res/layout/activity_jeeper_title_bar.xml
@@ -23,7 +23,8 @@
             android:gravity="center"
             android:text="@string/bar_title"
             android:textColor="#ffffffff"
-            android:textSize="20sp"></TextView>
+            android:textSize="20sp"
+            android:textStyle="normal|bold"></TextView>
 
         <Button
             android:id="@+id/bar_btn_backward"
