--- a/app/src/main/res/layout/activity_post_choose.xml
+++ b/app/src/main/res/layout/activity_post_choose.xml
@@ -41,6 +41,8 @@
             android:divider="#05000000"
             android:dividerHeight="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+        </cn.jeeper41.jeeper.wiget.RefreshListView>
     </LinearLayout>
 </LinearLayout>
