--- a/app/src/main/res/layout/forum_mainpost_item.xml
+++ b/app/src/main/res/layout/forum_mainpost_item.xml
@@ -3,14 +3,22 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="TextView"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvMainpostAuthor" />
+        android:id="@+id/authorInfoHolder">
+
+        <TextView
+            android:text="用户名初始化"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvMainpostAuthor"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <TextView
-        android:text="TextView"
+        android:text="标题初始化"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvMainpostTitle"
@@ -18,7 +26,7 @@
         android:textStyle="normal|bold" />
 
     <TextView
-        android:text="TextView"
+        android:text="内容初始化"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvMainpostContent"
