--- a/app/src/main/res/layout/forum_mainpost_item.xml
+++ b/app/src/main/res/layout/forum_mainpost_item.xml
@@ -30,5 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvMainpostContent"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" />
 </LinearLayout>
