--- a/app/src/main/res/layout/forum_reply_item.xml
+++ b/app/src/main/res/layout/forum_reply_item.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,15 +14,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvReplyAuthor"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="20dp" />
 
         <TextView
             android:text="沙发"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvReplyIndex"
-            android:layout_weight="1" />
-    </LinearLayout>
+            android:layout_weight="1"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp" />
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -34,6 +38,7 @@
             android:text="楼主说的好"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvReplyContent" />
+            android:id="@+id/tvReplyContent"
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 </LinearLayout>
