--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,31 +14,9 @@
         android:layout_marginBottom="120dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="120dp">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:id="@+id/topLoginBar"
-            android:paddingRight="20dp"
-            android:gravity="right">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right">
-
-                <ImageButton
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
-                    android:id="@+id/closeLogin"
-                    android:layout_weight="0.62"
-                    android:background="#00000000"
-                    android:layout_width="wrap_content" />
-            </LinearLayout>
-
-        </LinearLayout>
+        android:layout_marginTop="120dp"
+        android:paddingTop="60dp"
+        android:paddingBottom="20dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -58,7 +36,7 @@
                 android:ems="10"
                 android:id="@+id/etUsername"
                 android:layout_weight="1"
-                android:hint="Input your username"
+                android:hint="@string/HINT_USERNAME"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 android:textColor="#ffffffff" />
 
@@ -69,7 +47,7 @@
                 android:ems="10"
                 android:id="@+id/etPassword"
                 android:layout_weight="1"
-                android:hint="Input your password"
+                android:hint="@string/HINT_PASSWORD"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 android:textColor="#ffffffff" />
         </LinearLayout>
@@ -83,10 +61,10 @@
             android:layout_marginRight="10dp">
 
             <CheckBox
-                android:text="Remember me"
+                android:text="@string/REMEMBERME"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/checkBox"
+                android:id="@+id/cbRememberme"
                 android:textColor="#ffffffff" />
         </LinearLayout>
 
@@ -99,7 +77,7 @@
             android:layout_marginRight="10dp">
 
             <Button
-                android:text="Login"
+                android:text="@string/LOGIN"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnLogin"
