--- a/app/src/main/res/layout/activity_read_post.xml
+++ b/app/src/main/res/layout/activity_read_post.xml
@@ -39,7 +39,7 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:id="@+id/etWriteReply"
-            android:hint="      在这里写回复"
+            android:hint="@string/FORUM_HINT_REPLY"
             android:textSize="16sp"
             android:background="#00000000"
             android:layout_marginLeft="5dp"
