--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,15 +19,33 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/no_user" />
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/LOGIN_OR_REGISTER"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:id="@+id/tvCurrentUsername" />
+        android:layout_height="match_parent">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:text="@string/LOGIN_OR_REGISTER"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:id="@+id/tvCurrentUsername"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white" />
+
+        <Button
+            android:text="@string/LOGOUT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnLogout"
+            android:layout_centerHorizontal="false"
+            android:layout_alignParentRight="true"
+            android:background="#00000000"
+            android:textSize="12sp"
+            android:visibility="invisible"
+            android:textColor="@android:color/background_dark" />
+    </RelativeLayout>
 
 
 </LinearLayout>
